config for development

--- a/l10n/ru/viewer.properties
+++ b/l10n/ru/viewer.properties
@@ -250,3 +250,6 @@ password_cancel=Отмена
 printing_not_supported=Предупреждение: В этом браузере не полностью поддерживается печать.
 printing_not_ready=Предупреждение: PDF не полностью загружен для печати.
 web_fonts_disabled=Веб-шрифты отключены: не удалось задействовать встроенные PDF-шрифты.
+
+page_landmark=Расположение страницы
+loading=Загрузка
